# Vulnagent

./: .gitignore  CROSS_PLATFORM.md  Dockerfile  README.md  __init__.py  pyproject.toml
config/: constraints.yaml  settings.example.yaml
frontend/: index.html  vulnapp.css  vulnapp.js
src/vulnagent/: __init__.py  __main__.py  batch_runner.py  cli.py  config.py  manage_models.py  orchestrator.py  paths.py
src/vulnagent/agents/: __init__.py  discovery_agent.py  patch_agent.py  report_agent.py  verification_agent.py
src/vulnagent/analysis/: __init__.py  cve_dedup.py  reachability.py  trace.py
src/vulnagent/constraints/: __init__.py  engine.py  rules.py  updater.py
tests/: test_assessment_contract.py  test_cli_runtime.py  test_constraint_engine.py  test_cvss_tiers.py  test_dcrh_prompt_port.py  test_firmware_runtime.py  test_loop_detector.py  test_project_isolation.py  test_project_layout.py  test_runtime_api.py  test_runtime_projector.py  test_runtime_store.py  test_sandbox_isolation.py  test_settings_runtime.py  test_verification_pipeline.py  test_workbench_frontend.py
tests/test_analysis/: test_exploitability.py
tests/test_core/: test_agent_base.py  test_model_registry.py  test_settings.py  test_state.py
tests/test_integration/: test_firmware_emulation_flow.py  test_vuln_agents.py  test_vuln_orchestrator.py
tests/test_knowledge/: test_rag.py
tests/test_routing/: test_rule_engine.py
tests/test_tools/: test_artifact_tools.py
tests/test_utils/: test_logging.py  test_manage_models_runtime.py
tests/test_verification/: test_flag_checker.py
(+95 files in other folders)
