[project]
name = "vulnagent"
version = "0.1.0"
description = "Standalone vulnerability discovery agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
]

[project.scripts]
vuln-agent = "vulnagent.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vulnagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
